--- a/projet/logement/logement-ex1.html
+++ b/projet/logement/logement-ex1.html
@@ -2,10 +2,10 @@
   <head>
     <title>Le Pole Formation | Documentations et exercices</title>
     <meta charset="utf-8" />
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="../projet.css" rel="stylesheet" />
@@ -24,22 +24,22 @@
                 <i class="fa-solid fa-arrow-left-long"></i>
             </a>
         </nav>
-       
+
         <h1>Logement</h1>
         <nav class="breadcrumbs">
-            <select class="btn btn-secondary">
-                <option selected>Exercice 01 / 04</option>
-                <option>Exercice 02 / 04</option>
-                <option>Exercice 03 / 04</option>
-                <option>Exercice 04 / 04</option>
-            </select>
+              <select onchange="location=this.value" class="btn btn-secondary nav__ctrl">
+                  <option value="logement-ex1.html"selected>Exercice 01 / 04 </option>
+                  <option value="logement-ex2.html">Exercice 02 / 04</option>
+                  <option value="logement-ex3.html">Exercice 03 / 04</option>
+                  <option value="logement-ex4.html">Exercice 04 / 04</option>
+              </select>
             <div>
                 <h2>Nous nous informons sur le logement</h2>
                 <div class="progress-bar">
                     <div class="progress"></div>
                 </div>
             </div>
-            <a class="btn btn-secondary" href="../logement.html">
+            <a class="btn btn-secondary nav__ctrl" href="../logement.html" >
                <i class="fa-solid fa-xmark"></i>
            </a>
        </nav>
@@ -50,8 +50,8 @@
                         Regardez et écoutez la vidéo. Remettez le récit dans l'ordre.</strong>
                         <button class="btn btn-secondary" data-toggle="modal" data-target="#transcriptModal">Transcription</button>
                     </div>
-                    <iframe width="320" height="240" src="https://www.youtube.com/embed/-jxu97yOAV0" title="YouTube video player" 
-                    frameborder="0" 
+                    <iframe width="320" height="240" src="https://www.youtube.com/embed/-jxu97yOAV0" title="YouTube video player"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                     </iframe>
                     <div class="modal fade" id="transcriptModal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-            </section> 
+            </section>
             <section class="card__reponses">
                 <ul class="card__nav__exercices">
                     <li>Il a découvert différents types d’hébergement.</li>
