--- a/projet/logement/logement-ex3.html
+++ b/projet/logement/logement-ex3.html
@@ -2,10 +2,10 @@
   <head>
     <title>Le Pole Formation | Documentations et exercices</title>
     <meta charset="utf-8" />
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="../projet.css" rel="stylesheet" />
@@ -24,14 +24,14 @@
                 <i class="fa-solid fa-arrow-left-long"></i>
             </a>
         </nav>
-       
+
         <h1>Logement</h1>
         <nav class="breadcrumbs">
-            <select class="btn btn-secondary">
-                <option>Exercice 01 / 04</option>
-                <option>Exercice 02 / 04</option>
-                <option selected>Exercice 03 / 04</option>
-                <option>Exercice 04 / 04</option>
+            <select onchange="location=this.value" class="btn btn-secondary nav__ctrl">
+                <option value="logement-ex1.html">Exercice 01 / 04 </option>
+                <option value="logement-ex2.html">Exercice 02 / 04</option>
+                <option value="logement-ex3.html"selected>Exercice 03 / 04</option>
+                <option value="logement-ex4.html">Exercice 04 / 04</option>
             </select>
             <div>
                 <h2>Nous nous informons sur le logement</h2>
@@ -39,23 +39,70 @@
                     <div class="progress"></div>
                 </div>
             </div>
-            <a class="btn btn-secondary" href="../logement.html">
+            <a class="btn btn-secondary nav__ctrl" href="../logement.html">
                <i class="fa-solid fa-xmark"></i>
            </a>
        </nav>
        <div class="mt-4">
-            <h2>3. Vocabulaire: Logement</h2>
+            <h4>3. Vocabulaire: Logement</h4>
             <div class="card__exercice--vocab">
                 <div class="card__enonce--vocab">
                     <h3>Types de logement</h3>
                     <div>
-                        <p>Un immeuble</p>
+                        <p>Un immeuble <i class="fa-solid fa-building"></i></p>
                         <p>Un bâtiment</p>
                         <p>Un appartement</p>
                     </div>
+
                 </div>
+                <div class="card__enonce--vocab">
+                      <h3>Logement de vacances</h3>
+                        <div>
+                            <p>Un hôtel</p>
+                            <p>Un camping <i class="fa-solid fa-campground"></i></p>
+
+                            <p>Une auberge</p>
+                        </div>
+                </div>
+                <div class="card__enonce--vocab">
+                      <h3>Les personnes</h3>
+                        <div>
+                          <p>Un voisin</p>
+                        <p>Le/ la propriétaire</p>
+                        <p>Le / la locataire</p>
+                    </div>
             </div>
-       </div>
+
+
+            <div class="card__enonce--vocab">
+             <h3>Les actions</h3>
+               <div>
+                   <p>acheter ≠ vendre ≠ louer </p>
+                   <p>S'installer</p>
+                   <p>Se loger</p>
+               </div>
+             </div>
+
+             <div class="card__enonce--vocab">
+              <h3>Le style</h3>
+                <div>
+                    <p>Moderne </p>
+                    <p>Nature</p>
+                    <p>Vintage</p>
+                </div>
+              </div>
+
+              <div class="card__enonce--vocab">
+                 <h3>Décrire un logement</h3>
+                   <div>
+                       <p>Un petit/ grand appartement </p>
+                       <p>Un appartement lumineux</p>
+                       <p>Une maison moderne / ancienne</p>
+                   </div>
+              </div>
+
+
+
       </main>
       <footer>
           <div><a href="https://lepole-formation.fr/">Site web</a></div>
